src/Volo/FrontendBundle/Resources/public/css/pages/checkout.scss
/* ... */
.checkout__title--stacked {
  margin-bottom: 0;
}

.checkout__subtitle {
  font-family: $bold-font-family;
  font-size: 0.875em;
  padding: $space-md $grid-gutter-width / 2;
  line-height: normal;
  margin: 0;
  text-align: center;
  text-transform: uppercase;
  position: relative;
  @include respond-from("screen-md") {
    padding: 0 $grid-gutter-width $space-md;
    text-align: left;
  }
}

.checkout__title__edit {
  display: inline-block;
  @include vertical-center-absolute();
  right: $grid-gutter-width / 2;
  text-transform: none;
  font-family: $base-font-family;

  i {
    display: inline-block;
    margin-right: 2px;
    vertical-align: middle;
    color: $color-text-highlight;
  }

  i.icon-cancel {
    font-size: 1.2em;
  }
}

.checkout__subtitle__edit {
  @extend .checkout__title__edit;
}

.add_new_address_link__text--cancel{
  display: none;
}

.delivery_information_list-shown {
  & .add_new_address_link__text--add-address,
  & .icon-plus {
    display: none;
  }

  & .add_new_address_link__text--cancel {
    display: block;
  }
}

.checkout__delivery_information {
  @include make-row();
}

.checkout__delivery_information__time {
  @include make-xs-column(6, 0);
}

.checkout__delivery_information__address {
  @include make-xs-column(6);
}
// main fields

.checkout__time-field {
  @include make-xs-column(6);
  padding: 0;

  select {
    @extend .form-control;
  }
}

.checkout__item {
  @include clearfix;
  line-height: 1.4em;
  font-size: 0.813em;
  padding: $space-sm;
  padding-top: 0;

  .button {
    width: 100%;
  }

  @include respond-from("screen-md") {
    font-size: 0.875em;
    border: 0;
    padding: 0 $grid-gutter-width $space-lg;

    .button {
      float: right;
      width: auto;
    }
  }

  textarea {
    height: $input-height * 2;
    line-height: 1.4em;
  }

  span {
    display: block;

    &.notes {
      color: $color-text-secondary;
    }

    &:first-child {
      margin-top: $space-sm;
      @include respond-from("screen-md") {
        margin-top: 0;
      }
    }
  }

  .checkout__item {
    font-size: 1em;
  }
}

.checkout__item--delivery-list {
  padding-left: 0;
  padding-right: 0;
}

.contact_information_form-open {
  .edit_contact_information_form_link__text--edit,
  .icon-pencil {
    display: none;
  }
  .edit_contact_information_form_link__text--cancel {
    display: block;
  }
}

.edit_contact_information_form_link__text--cancel {
  display: none;
}

.checkout__more-feature-link .select_other_address_link__text--cancel {
  display: none;
}

.checkout__more-feature-link.address-selection--open {
  & .select_other_address_link__text--select {
    display: none;
  }
  & .select_other_address_link__text--cancel {
    display: block;
  }
}

.checkout__item--no-subtitle {
  padding-top: $space-sm;
  @include respond-from("screen-md") {
    padding-top: 0;
  }
}

.checkout__item--step {
  padding-top: $space-sm;
  border-bottom: $dropdown-border;
  @include respond-from("screen-md") {
    border-bottom: none;
    padding-top: 0;
  }
}

.checkout__item--stacked {
  @include appear-from("screen-md");
}

.checkout__item__info {
  @include make-xs-column(12);

  .checkout__subtitle {
    font-size: 1em;
    padding-bottom: 0;
  }
}

.checkout__item__note {
  color: $color-text-secondary;
  width: 55%;
}

.checkout__item--cta-box {
  @include appear-from("screen-md");
  @extend .checkout__item;
  padding-top: $grid-gutter-width / 2;
  border: none;

  span {
    display: inline-block;
    float: right;

    i {
      display: inline-block;
      vertical-align: middle;
      color: $color-text-highlight;
      font-size: 1.2em;
    }
  }
}

// time picker

.time-picker {
  .desktop-cart__title {
    @extend .checkout__subtitle;
  }

  .desktop-cart__time {
    @extend .checkout__time;
  }

  .desktop-cart__time__field-date, .desktop-cart__time__field-time {
    @extend .checkout__time-field;
  }
}

// address box

.checkout__address-boxes {

  @include respond-from("screen-md") {
    @include make-row();
    padding-bottom:  $grid-gutter-width / 2;
    padding-left:  $grid-gutter-width / 2;
  }
}

.checkout__address-box {

  @include clearfix;
  line-height: 1.4em;
  font-size: 0.813em;
  padding: $space-sm;
  border-bottom: $dropdown-border;

  @include respond-from("screen-md") {
    @include make-md-column(4);
    padding-left: 0;
  }
}

.checkout__address-box__wrapper {

  @include respond-from("screen-md") {
    border: $dropdown-border;
    padding: $grid-gutter-width / 2;
    margin-bottom: $grid-gutter-width / 2;
    height: 110px;
    overflow: hidden;
    line-height: 1.4em;
    font-size: 0.875em;
    position: relative;

    &:hover {
      cursor: pointer;
      border: $input-border-active;
    }
  }
}

.checkout__address-box__wrapper--active {
  @include respond-from("screen-md") {
    @extend .checkout__address-box__wrapper;
    border: $input-border-active;
  }
}

.checkout__address-box__notes {
  color: $color-text-secondary;
  @include respond-from("screen-md") {
    @include text-overflow();
  }
}

.checkout__address-box__new {
  @include respond-from("screen-md") {
    margin: auto;
    text-align: center;
    @include vertical-center-element();

    i {
      display: block;
      color: $color-icons-separator;
      font-size: 1.4em;
    }
  }
}

// payment type selection

.checkout__payments {
  @include respond-from("screen-md") {
    @include make-row();
    padding-bottom:  $grid-gutter-width / 2;
    padding-left:  $grid-gutter-width / 2;
    border: none;
    margin: 0 $grid-gutter-width / 2;
  }
}

.checkout__payment {
  @include make-md-column(4);
  @include make-lg-column(3);
  @include clearfix;
  padding: 0;
  line-height: 1.4em;
  font-size: 0.813em;
  @include respond-from("screen-md") {
    padding: $space-sm;
    padding-left: 0;
  }
}
/* ... */

